<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/cart" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Orders" />

    <item
        android:id="@+id/nav_wishlist"
        android:icon="@android:drawable/btn_star"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/rounded_account_circle_24"
        android:title="@string/profile" />

</menu>